<resources>
    <string name="app_name">DeepSleep</string>
    <string name="test">Test</string>
    <string name="navigation_view_header_title">Test</string>
    <string name="menu_filter">filter</string>
    <string name="menu_filter_user">show user app</string>
    <string name="menu_filter_system">show system app</string>
    <string name="menu_filter_all">show all app</string>
    <string name="menu_filter_restricted">show restricted app</string>
    <string name="menu_filter_extend">show Extend enabled app</string>
    <string name="search_title">search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wakelock">wakelock</string>
    <string name="alarm">alarm</string>
    <string name="server">server</string>
    <string name="xposeddescription">an test module</string>
    <string name="sync">sync</string>
    <string name="active">Module is not active</string>
    <string name="Save">Save</string>
    <string name="allowList">AllowList</string>
    <string name="blockList">BlockList</string>
    <string name="rE">Regular expression</string>

    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="theme_list">General theme</string>
    <string name="light_theme_name">Light</string>
    <string name="dark_theme_name">Dark</string>
    <string name="black_theme_name">Black (AMOLED)</string>
    <string name="system_theme_name">Follow System</string>

    <string name="about">About</string>

    <string name="help">Help</string>
    <string name="help_instructions"> Click the application icon to enter the app\'s global settings.
        <![CDATA[<br><br>]]> Long Click the application name to enter the extended settings, including whitelist/blacklist/restricted regular support.
        <![CDATA[<br><br>]]> Priority: Extended settings {Whitelist> Blacklist> Regular}> Global Settings
        <![CDATA[<br><br>]]> If you are using EdXposed or LSPosed, the app you want limited need to be selected in the module activation scope.
        <![CDATA[<br><br>]]> Serious warning, don\'t restrict system application, it will cause unpredictable consequences.
    </string>
    <string name="help_contact">Contact:\n
            If you have any questions or encounter bugs during use, you can email me or initiate a new issue.\n
        \n
        Issue : https://github.com/Jasper-1024/DeepSleep/issues \n
        \n
        JasperHale: ljy087621@gmail.com</string>
    <string name="appname">AppName</string>
    <string name="version">Version</string>
    <string name="Support">Support</string>
    <string name="SourceCode">Source Code</string>
    <string name="SourceCodeUrl">https://github.com/Jasper-1024/DeepSleep</string>
    <string name="License">License</string>
    <string name="donate">Donate?</string>
    <string name="donateErr">您未安装支付宝或启动异常..😂..</string>
    <string name="other">Other</string>
    <string name="Extend">Extend function</string>
    <string name="experimental">Experimental function</string>
    <string name="Extend_summary">Allow list/Block list/Regular expression support</string>
    <string name="BackupAndRestore">Backup and restore</string>
    <string name="backup_summary">Backup settings of installed app into file</string>
    <string name="backup_title">Create new backup file</string>
    <string name="restore_summary">Restoring from a backup file will overwrite the current settings</string>
    <string name="restore_title">Restore from backup file</string>
    <string name="backup">Backup complete</string>
    <string name="restore">Restore complete</string>
    <string name="backupErr">Backup Error</string>
    <string name="restoreErr">Restore Error</string>
    <string name="extendEnable">Extend not active,please enable extend function.</string>
    <string name="broadcast">broadcast</string>
    <string-array name="scopes" translatable="false">
        <!--        <item>android</item>-->
        <!--        <item>com.android.providers.settings</item>-->
        <item>com.js.deepsleep</item>
    </string-array>
    <string name="forcestop">Force stop automatically</string>
    <string name="forcestop_summary">Forced to stop APP after setting change,Lsposed/Edxposed scope need to select system framework</string>
    <string name="forcestopEnable">Force stop failed,Maybe system framework not selected on xposed.</string>
</resources>