<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.js.deepsleep.ui.databinding.Converter" />

        <variable
            name="vm"
            type="com.js.deepsleep.ui.extend.fbase.FBaseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".ui.extend.fbase.FBaseFragment">


        <TextView
            android:id="@+id/allowList_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/allowList"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/allowList_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/allowList_button"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/allowList_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> vm.setEx(vm.extend)}"
            android:text="@string/Save"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/allowList_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:inputType="textMultiLine"
            android:text="@={Converter.setToString(vm.extend.allowList)}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/allowList_button"
            tools:ignore="LabelFor,MissingConstraints" />

        <TextView
            android:id="@+id/blockList_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/blockList"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/blockList_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/blockList_button"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/blockList_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> vm.setEx(vm.extend)}"
            android:text="@string/Save"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/allowList_editText"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/blockList_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:inputType="textMultiLine"
            android:text="@={Converter.setToString(vm.extend.blockList)}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blockList_button"
            tools:ignore="LabelFor,MissingConstraints" />

        <TextView
            android:id="@+id/rE_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/rE"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/rE_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rE_button"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/rE_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> vm.setEx(vm.extend)}"
            android:text="@string/Save"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blockList_editText"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/rE_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:inputType="textMultiLine"
            android:text="@={Converter.setToString(vm.extend.rE)}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rE_button"
            tools:ignore="LabelFor,MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>